# kod-craft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bs.pl
data/py/: init.py
src/: block.cpp  block.h  chunk.cpp  chunk.h  dimension.cpp  dimension.h  entity.cpp  entity.h  hitbox.cpp  hitbox.h  keyboard.cpp  keyboard.h  main.cpp  player.cpp  player.h  py.cpp  py.h  spinlock.h  states.h  world.cpp  world.h
